# repo-to-skill

./: .gitignore  CONTRIBUTING.md  NOTICE  README.md  README.zh-CN.md  SECURITY.md  pyproject.toml
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
adapters/: README.md
adapters/cli-workflow/: README.md
adapters/generic-markdown/: README.md
designs/repo-to-skill-launch/: Repo to Skill Launch Video.html  animations.jsx  repo-to-skill-launch-script.md  repo-to-skill-launch-storyboard.md  video-data.jsx  video-scenes.jsx
docs/: architecture.md  compatibility.md  evals.md  how-it-works.md  methodology.md  methodology.zh-CN.md  security.md  skill-output-format.md  skill-reference.md  skill-reference.zh-CN.md
examples/tiny-python-app/: pyproject.toml
examples/tiny-python-app/src/tiny_app/: cli.py
repo_to_skill/: cli.py  models.py
repo_to_skill/evals/: __init__.py  checks.py  runner.py
repo_to_skill/resources/: __init__.py
repo_to_skill/reverse/: __init__.py  callable_capabilities.py  capability_evidence.py  capability_graph.py  confidence_report.py  (+3 more)
tests/: test_callable_bundle.py  test_callable_capabilities.py  test_callable_composite.py  test_callable_selector.py  test_callable_skillgen.py  test_cli.py  test_docs.py  test_eval_cli.py  test_filesystem_scanner.py  test_ignore_rules.py  test_installer.py  test_language_detect.py  test_no_interface_guidance.py  test_project_profile.py  test_skill_description.py  test_skill_language.py  test_skillgen_cli.py
(+47 files in other folders)
