[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "repo-to-skill"
version = "0.1.0"
description = "Local-first tooling for turning repository knowledge into reusable AI coding agent skill packs."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [
  { name = "repo-to-skill contributors" }
]
dependencies = [
  "typer",
  "pydantic",
  "jinja2",
  "pyyaml",
  "rich",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "ruff",
]

[project.scripts]
repo-to-skill = "repo_to_skill.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["repo_to_skill"]
artifacts = ["repo_to_skill/resources/**"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
